Changed service logic